--- a/config.toml
+++ b/config.toml
@@ -189,7 +189,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       #  title shown in home page (HTML format is supported)
       title = "martian0x80"
       # subtitle shown in home page (HTML format is supported)
-      subtitle = "Just your friendly neighbourhood developer.<br>Interested in reverse engineering, infosec, cryptography and mathematics."
+      subtitle = "Just your friendly neighbourhood developer.<br/>Interested in reverse engineering, backend development, GUI development, linux system administration and kernel programming.<br/>I like ricing my distros."
       # whether to use typeit animation for subtitle
       typeit = true
       # whether to show social links
